#
# SPDX-License-Identifier: GPL-2.0-or-later
# Copyright (C) Oren Sokoler (https://github.com/orenskl)
#

cmake_minimum_required(VERSION 3.22)

project(romgen)

add_executable(romgen
    ../../src/vm/cpu/c/Addressing_c.cpp
    ../../src/vm/cpu/c/Assembler_c.cpp
    ../../src/vm/cpu/c/BinaryAssembler_c.cpp
    ../../src/vm/cpu/c/CodeGenerator_c.cpp
    ../../src/vm/cpu/c/CodeOptimizer_c.cpp
    ../../src/vm/cpu/c/CompilationQueue_c.cpp
    ../../src/vm/cpu/c/CompiledMethod_c.cpp
    ../../src/vm/cpu/c/CompiledMethodDesc_c.cpp
    ../../src/vm/cpu/c/Debug_c.cpp
    ../../src/vm/cpu/c/Disassembler_c.cpp
    ../../src/vm/cpu/c/FloatSupport_c.cpp
    ../../src/vm/cpu/c/FPURegisterMap_c.cpp
    ../../src/vm/cpu/c/Frame_c.cpp
    ../../src/vm/cpu/c/GlobalDefinitions_c.cpp
    ../../src/vm/cpu/c/Instructions_c.cpp
    ../../src/vm/cpu/c/Interpreter_c.cpp
    ../../src/vm/cpu/c/InterpreterRuntime_c.cpp
    ../../src/vm/cpu/c/RegisterAllocator_c.cpp
    ../../src/vm/cpu/c/VirtualStackFrame_c.cpp
    ../../src/vm/share/compiler/Addressing.cpp
    ../../src/vm/share/compiler/BinaryAssemblerCommon.cpp
    ../../src/vm/share/compiler/BinaryLabel.cpp
    ../../src/vm/share/compiler/BytecodeClosure.cpp
    ../../src/vm/share/compiler/BytecodeCompileClosure.cpp
    ../../src/vm/share/compiler/CodeGenerator.cpp
    ../../src/vm/share/compiler/CompilationQueue.cpp
    ../../src/vm/share/compiler/Compiler.cpp
    ../../src/vm/share/compiler/CompilerObject.cpp
    ../../src/vm/share/compiler/CompilerTest.cpp
    ../../src/vm/share/compiler/LiteralPoolElement.cpp
    ../../src/vm/share/compiler/Location.cpp
    ../../src/vm/share/compiler/RegisterAllocator.cpp
    ../../src/vm/share/compiler/Relocation.cpp
    ../../src/vm/share/compiler/Value.cpp
    ../../src/vm/share/compiler/VirtualStackFrame.cpp
    ../../src/vm/share/compiler/VSFMergeTest.cpp
    ../../src/vm/share/debugger/JavaDebugger.cpp
    ../../src/vm/share/debugger/MemoryMonitor.cpp
    ../../src/vm/share/debugger/MemoryMonitorMd.cpp
    ../../src/vm/share/debugger/VMEvent.cpp
    ../../src/vm/share/float/Cosine_kernel.cpp
    ../../src/vm/share/float/FloatNatives.cpp
    ../../src/vm/share/float/IEEE754_fmod.cpp
    ../../src/vm/share/float/IEEE754_rem_pio2.cpp
    ../../src/vm/share/float/IEEE754_sqrt.cpp
    ../../src/vm/share/float/JFP_lib_acos.cpp
    ../../src/vm/share/float/JFP_lib_asin.cpp
    ../../src/vm/share/float/JFP_lib_atan.cpp
    ../../src/vm/share/float/JFP_lib_atan2.cpp
    ../../src/vm/share/float/JFP_lib_ceil.cpp
    ../../src/vm/share/float/JFP_lib_copysign.cpp
    ../../src/vm/share/float/JFP_lib_cos.cpp
    ../../src/vm/share/float/JFP_lib_fabs.cpp
    ../../src/vm/share/float/JFP_lib_floor.cpp
    ../../src/vm/share/float/JFP_lib_scalbn.cpp
    ../../src/vm/share/float/JFP_lib_sin.cpp
    ../../src/vm/share/float/JFP_lib_tan.cpp
    ../../src/vm/share/float/Remainder_pio2_kernel.cpp
    ../../src/vm/share/float/Sine_kernel.cpp
    ../../src/vm/share/float/Tangent_kernel.cpp
    ../../src/vm/share/handles/Array.cpp
    ../../src/vm/share/handles/ArrayClass.cpp
    ../../src/vm/share/handles/Boundary.cpp
    ../../src/vm/share/handles/Buffer.cpp
    ../../src/vm/share/handles/CallInfo.cpp
    ../../src/vm/share/handles/ClassInfo.cpp
    ../../src/vm/share/handles/ClassParserState.cpp
    ../../src/vm/share/handles/CompiledMethod.cpp
    ../../src/vm/share/handles/ConstantPool.cpp
    ../../src/vm/share/handles/EntryActivation.cpp
    ../../src/vm/share/handles/ExecutionStack.cpp
    ../../src/vm/share/handles/FarClass.cpp
    ../../src/vm/share/handles/FieldType.cpp
    ../../src/vm/share/handles/Instance.cpp
    ../../src/vm/share/handles/InstanceClass.cpp
    ../../src/vm/share/handles/JavaClass.cpp
    ../../src/vm/share/handles/JavaClassObj.cpp
    ../../src/vm/share/handles/JavaNear.cpp
    ../../src/vm/share/handles/JavaOop.cpp
    ../../src/vm/share/handles/MetaObjType.cpp
    ../../src/vm/share/handles/Method.cpp
    ../../src/vm/share/handles/MixedOop.cpp
    ../../src/vm/share/handles/Near.cpp
    ../../src/vm/share/handles/NearClass.cpp
    ../../src/vm/share/handles/ObjArray.cpp
    ../../src/vm/share/handles/ObjArrayClass.cpp
    ../../src/vm/share/handles/ObjNear.cpp
    ../../src/vm/share/handles/Oop.cpp
    ../../src/vm/share/handles/OopVisitor.cpp
    ../../src/vm/share/handles/ROMizerHashEntry.cpp
    ../../src/vm/share/handles/Signature.cpp
    ../../src/vm/share/handles/SoftRefArray.cpp
    ../../src/vm/share/handles/StackmapList.cpp
    ../../src/vm/share/handles/String.cpp
    ../../src/vm/share/handles/StringTable.cpp
    ../../src/vm/share/handles/Symbol.cpp
    ../../src/vm/share/handles/Symbols.cpp
    ../../src/vm/share/handles/SymbolTable.cpp
    ../../src/vm/share/handles/ThreadObj.cpp
    ../../src/vm/share/handles/TypeArray.cpp
    ../../src/vm/share/handles/TypeArrayClass.cpp
    ../../src/vm/share/handles/TypeSymbol.cpp
    ../../src/vm/share/handles/Universe.cpp
    ../../src/vm/share/handles/WeakRefArray.cpp
    ../../src/vm/share/handles/WeakReference.cpp
    ../../src/vm/share/interpreter/Bytecodes.cpp
    ../../src/vm/share/interpreter/GPSkeleton.cpp
    ../../src/vm/share/interpreter/OopMaps.cpp
    ../../src/vm/share/interpreter/InterpreterRuntime.cpp
    ../../src/vm/share/memory/Allocation.cpp
    ../../src/vm/share/memory/ArrayClassDesc.cpp
    ../../src/vm/share/memory/ClassInfoDesc.cpp
    ../../src/vm/share/memory/ClassParserStateDesc.cpp
    ../../src/vm/share/memory/CompiledMethodCache.cpp
    ../../src/vm/share/memory/CompiledMethodDesc.cpp
    ../../src/vm/share/memory/ConstantPoolDesc.cpp
    ../../src/vm/share/memory/EntryActivationDesc.cpp
    ../../src/vm/share/memory/ExecutionStackDesc.cpp
    ../../src/vm/share/memory/FarClassDesc.cpp
    ../../src/vm/share/memory/FinalizerConsDesc.cpp
    ../../src/vm/share/memory/InstanceClassDesc.cpp
    ../../src/vm/share/memory/JavaClassDesc.cpp
    ../../src/vm/share/memory/LargeObject.cpp
    ../../src/vm/share/memory/MetaObjTypeDesc.cpp
    ../../src/vm/share/memory/MethodDesc.cpp
    ../../src/vm/share/memory/MixedOopDesc.cpp
    ../../src/vm/share/memory/ObjectHeap.cpp
    ../../src/vm/share/memory/ObjNearDesc.cpp
    ../../src/vm/share/memory/OopDesc.cpp
    ../../src/vm/share/memory/ROMizerHashEntryDesc.cpp
    ../../src/vm/share/memory/StackmapGenerator.cpp
    ../../src/vm/share/memory/StackmapListDesc.cpp
    ../../src/vm/share/memory/SymbolDesc.cpp
    ../../src/vm/share/memoryprofiler/MemoryProfiler.cpp
    ../../src/vm/share/natives/jni.cpp
    ../../src/vm/share/natives/kni.cpp
    ../../src/vm/share/natives/KniUncommon.cpp
    ../../src/vm/share/natives/kvmcompat.cpp
    ../../src/vm/share/natives/Natives.cpp
    ../../src/vm/share/natives/PCSLSocket.cpp
    ../../src/vm/share/natives/ReflectNatives.cpp
    ../../src/vm/share/natives/sni.cpp
    ../../src/vm/share/ROM/BinaryROM.cpp
    ../../src/vm/share/ROM/BytecodeOptimizer.cpp
    ../../src/vm/share/ROM/ConstantPoolRewriter.cpp
    ../../src/vm/share/ROM/MethodInvocationClosure.cpp
    ../../src/vm/share/ROM/ROM.cpp
    ../../src/vm/share/ROM/ROMBitSet.cpp
    ../../src/vm/share/ROM/ROMClassPatternMatcher.cpp
    ../../src/vm/share/ROM/ROMFieldPatternMatcher.cpp
    ../../src/vm/share/ROM/ROMInliner.cpp
    ../../src/vm/share/ROM/ROMMemberPatternMatcher.cpp
    ../../src/vm/share/ROM/ROMMethodPatternMatcher.cpp
    ../../src/vm/share/ROM/ROMOptimizer.cpp
    ../../src/vm/share/ROM/ROMProfile.cpp
    ../../src/vm/share/ROM/ROMStructsWriter.cpp
    ../../src/vm/share/ROM/ROMTools.cpp
    ../../src/vm/share/ROM/ROMWriter.cpp
    ../../src/vm/share/ROM/SegmentedSourceROMWriter.cpp
    ../../src/vm/share/ROM/SourceObjectWriter.cpp
    ../../src/vm/share/ROM/SourceROMOptimizer.cpp
    ../../src/vm/share/ROM/SourceROMWriter.cpp
    ../../src/vm/share/runtime/BufferedFile.cpp
    ../../src/vm/share/runtime/ClassFileParser.cpp
    ../../src/vm/share/runtime/ClassPathAccess.cpp
    ../../src/vm/share/runtime/DeadlockFinder.cpp
    ../../src/vm/share/runtime/Field.cpp
    ../../src/vm/share/runtime/FileDecoder.cpp
    ../../src/vm/share/runtime/FilePath.cpp
    ../../src/vm/share/runtime/Frame.cpp
    ../../src/vm/share/runtime/HotRoutines0.cpp
    ../../src/vm/share/runtime/HotRoutines1.cpp
    ../../src/vm/share/runtime/Inflate.cpp
    ../../src/vm/share/runtime/JarFileParser.cpp
    ../../src/vm/share/runtime/JarFileUncommon.cpp
    ../../src/vm/share/runtime/JavaVTable.cpp
    ../../src/vm/share/runtime/JVM.cpp
    ../../src/vm/share/runtime/MethodTrap.cpp
    ../../src/vm/share/runtime/OS.cpp
    ../../src/vm/share/runtime/OsFile.cpp
    ../../src/vm/share/runtime/OsMemory.cpp
    ../../src/vm/share/runtime/Profiler.cpp
    ../../src/vm/share/runtime/Scheduler.cpp
    ../../src/vm/share/runtime/Semaphore.cpp
    ../../src/vm/share/runtime/Synchronizer.cpp
    ../../src/vm/share/runtime/SystemDictionary.cpp
    ../../src/vm/share/runtime/Task.cpp
    ../../src/vm/share/runtime/TaskContext.cpp
    ../../src/vm/share/runtime/Thread.cpp
    ../../src/vm/share/runtime/Throw.cpp
    ../../src/vm/share/runtime/Throwable.cpp
    ../../src/vm/share/runtime/WTKProfiler.cpp
    ../../src/vm/share/utilities/AccessFlags.cpp
    ../../src/vm/share/utilities/Arguments.cpp
    ../../src/vm/share/utilities/BytecodeHistogram.cpp
    ../../src/vm/share/utilities/BytecodePrintClosure.cpp
    ../../src/vm/share/utilities/CharacterStream.cpp
    ../../src/vm/share/utilities/ConstantTag.cpp
    ../../src/vm/share/utilities/Debug.cpp
    ../../src/vm/share/utilities/ErrorMessage.cpp
    ../../src/vm/share/utilities/EventLogger.cpp
    ../../src/vm/share/utilities/Generator.cpp
    ../../src/vm/share/utilities/GlobalDefinitions.cpp
    ../../src/vm/share/utilities/Globals.cpp
    ../../src/vm/share/utilities/PairHistogram.cpp
    ../../src/vm/share/utilities/RemoteTracer.cpp
    ../../src/vm/share/utilities/Stream.cpp
    ../../src/vm/share/utilities/Timer.cpp
    ../../src/vm/share/verifier/Verifier.cpp
    ../../src/vm/share/verifier/VerifierFrame.cpp
    ../../src/vm/share/verifier/VerifyMethodCodes.cpp
    ../../src/vm/os/linux/JVM_linux.cpp
    ../../src/vm/os/linux/MemoryMonitorMd_linux.cpp
    ../../src/vm/os/linux/OsFile_linux.cpp
    ../../src/vm/os/linux/OsMemory_linux.cpp
    ../../src/vm/os/linux/OsMisc_linux.cpp
    ../../src/vm/os/linux/OsSocket_linux.cpp
    ../../src/vm/share/runtime/jvmspi.cpp
    ../../src/vm/share/natives/BSDSocket.cpp
    ../../src/vm/share/ROM/ROMSkeleton.cpp
    ../../src/vm/share/natives/NativesTable.cpp
    ../../../src/linux/Main.cpp
    ../../../src/linux/OS.cpp
)

target_include_directories(romgen PRIVATE
                    ../../src/include 
                    ../../src/vm/share/runtime
                    ../../src/vm/share/memory
                    ../../src/vm/share/utilities
                    ../../src/vm/share/natives
                    ../../src/vm/share/handles
                    ../../src/vm/cpu/c
                    ../../src/vm/share/ROM
                    ../../src/vm/share/interpreter
                    ../../src/vm/share/debugger
                    ../../src/vm/share/compiler
                    ../../src/vm/share/float
                    ../../src/vm/share/verifier
                    ../../src/vm/os/linux
)

target_compile_definitions(romgen PRIVATE AZZERT _DEBUG JVM_RELEASE_VERSION="${ROMGEN_VERSION}")

target_compile_options(romgen PRIVATE -m32)
target_link_options(romgen PRIVATE -m32)

install(TARGETS romgen DESTINATION ${ROMGEN_INSTALL_DIR})

